put quotes on image source

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-<img src=logo_single.png>
+<img src="logo_single.png">
 
 <a href="https://www.etsy.com/shop/ChernyGoodsCo?ref=ss_profile"> 
     Shop
