background color changed to black

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 
 
 <style>
-    a{color:E29D25 ; }
+    a {
+        color: E29D25;
+    
+    }
+    body {
+        background-color: black;
+    }
 </style>
 
 
