centered text and image and space them out

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
 <style>
     a {
         color: E29D25;
+        font-size: 5em;
+        
     
     }
+
     body {
         background-color: black;
+        text-align: center;
+        padding-top: 3em;
+    }
+    div.link{
+
+        text-align: center;
+        margin-top: 1em; 
     }
 </style>
 
@@ -24,14 +34,11 @@
 
 
 <img src="logo_single.png">
-
+<div class="link">
 <a href="https://www.etsy.com/shop/ChernyGoodsCo?ref=ss_profile"> 
-    Shop
+    <b>Shop</b>
 </a>
-
-
-
-
+</div>
 
 
 </body>
