added social media icons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
     <b>Shop</b>
 </a>
 </div>
-
+<img src="instagramIcon.png">
+<img src="facebookicon.png">
+<img src="yt_icon_rgb.png">
+<img src="TwitchGlitchPurple.png">
+<img src="Twitter_Logo_Blue.png">
+<img src="badgeRGB-288px.png">
 
 </body>
 
