added links to the icons

--- a/index.html
+++ b/index.html
@@ -39,12 +39,19 @@
     <b>Shop</b>
 </a>
 </div>
-<img src="instagramIcon.png">
-<img src="facebookicon.png">
-<img src="yt_icon_rgb.png">
-<img src="TwitchGlitchPurple.png">
-<img src="Twitter_Logo_Blue.png">
-<img src="badgeRGB-288px.png">
+<a href="https://www.instagram.com/chernygoodsco/
+"><img src="instagramIcon.png"></a>
+<a href="https://www.facebook.com/ChernyGoodsCo/">
+    <img src="facebookicon.png"></a>
+<a href="https://www.youtube.com/channel/UCpSzGZ77IeSEfwOoy0nq1yw">
+    <img src="yt_icon_rgb.png"></a>
+<a href="https://www.twitch.tv/chernygoodsco">
+    <img src="TwitchGlitchPurple.png"></a>
+<a href="https://twitter.com/ChernyGoodsCo">
+    <img src="Twitter_Logo_Blue.png"></a>
+<a href="https://www.pinterest.com/ChernyGoodsCo/">
+    <img src="badgeRGB-288px.png"></a>
+
 
 </body>
 
