--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 
-<img src="logo_single.png">
+<img src="logo_single.png" width="727" height="228">
 <div class="link">
 <a href="https://www.etsy.com/shop/ChernyGoodsCo?ref=ss_profile"> 
     <b>Shop</b>
@@ -51,17 +51,17 @@
 </div>
 <div class="icons">
 <a href="https://www.instagram.com/chernygoodsco/">
-    <img src="instagramIcon.png"  height="50"></a>
+    <img src="instagramIcon.png"  width="50" height="50"></a>
 <a href="https://www.facebook.com/ChernyGoodsCo/">
-    <img src="facebookicon.png"  height="50"></a>
+    <img src="facebookicon.png" width="50" height="50"></a>
 <a href="https://www.youtube.com/channel/UCpSzGZ77IeSEfwOoy0nq1yw">
-    <img src="yt_icon_rgb.png"  height="50"></a>
+    <img src="yt_icon_rgb.png" width="71" height="50"></a>
 <a href="https://www.twitch.tv/chernygoodsco">
-    <img src="TwitchGlitchPurple.png"  height="50"></a>
+    <img src="TwitchGlitchPurple.png" width=43 height="50"></a>
 <a href="https://twitter.com/ChernyGoodsCo">
-    <img src="Twitter_Logo_Blue.png"  height="50"></a>
+    <img src="Twitter_Logo_Blue.png" width="50" height="50"></a>
 <a href="https://www.pinterest.com/ChernyGoodsCo/">
-    <img src="badgeRGB-288px.png"  height="50"></a>
+    <img src="badgeRGB-288px.png" width="50" height="50"></a>
 </div>
 
 </body>
