Using share and save link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <img src="logo_single.png" width="727" height="228">
 <div class="link">
-<a href="https://www.etsy.com/shop/ChernyGoodsCo?ref=ss_profile"> 
+<a href="https://chernygoodsco.etsy.com/"> 
     <b>Shop</b>
 </a>
 </div>
