--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <img src="logo_single.png" width="727" height="228">
 <div class="link">
 <a href="https://chernygoodsco.etsy.com/"> 
-    <b>Shop</b>
+    <b>Our Etsy Store</b>
 </a>
 </div>
 <div class="icons">
