Formatted HTML using Prettier

--- a/index.html
+++ b/index.html
@@ -1,83 +1,73 @@
 <html>
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-817839-45"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-<head>
+      gtag("config", "UA-817839-45");
+    </script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-817839-45"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-817839-45');
-</script>
-
-
-<style>
-    a {
+    <style>
+      a {
         color: E29D25;
-        
-    }
+      }
 
-    body {
+      body {
         background-color: black;
         text-align: center;
         padding-top: 3em;
-    }
-    div.link {
-
+      }
+      div.link {
         font-size: 5em;
         text-align: center;
-        margin-top: 1em; 
-    }
-    div.icons {
-
+        margin-top: 1em;
+      }
+      div.icons {
         position: absolute;
         bottom: 0;
         width: 100%;
         padding-bottom: 2em;
-        
-    }
-    div.icons img {
+      }
+      div.icons img {
         margin: 1em;
-    }
-</style>
+      }
+    </style>
+  </head>
 
-
-
-</head>
-
-
-<body>
-
-
-
-
-<img src="logo_single.png" width="727" height="228">
-<div class="link">
-<a href="https://chernygoodsco.etsy.com/"> 
-    <b>Our Etsy Store</b>
-</a>
-</div>
-<div class="icons">
-<a href="https://www.instagram.com/chernygoodsco/">
-    <img src="instagramIcon.png"  width="50" height="50"></a>
-<a href="https://www.facebook.com/ChernyGoodsCo/">
-    <img src="facebookicon.png" width="50" height="50"></a>
-<a href="https://www.youtube.com/channel/UCpSzGZ77IeSEfwOoy0nq1yw">
-    <img src="yt_icon_rgb.png" width="71" height="50"></a>
-<a href="https://www.twitch.tv/chernygoodsco">
-    <img src="TwitchGlitchPurple.png" width=43 height="50"></a>
-<a href="https://twitter.com/ChernyGoodsCo">
-    <img src="Twitter_Logo_Blue.png" width="50" height="50"></a>
-<a href="https://www.pinterest.com/ChernyGoodsCo/">
-    <img src="badgeRGB-288px.png" width="50" height="50"></a>
-</div>
-
-</body>
-
-
-
-
-
+  <body>
+    <img src="logo_single.png" width="727" height="228" />
+    <div class="link">
+      <a href="https://chernygoodsco.etsy.com/">
+        <b>Our Etsy Store</b>
+      </a>
+    </div>
+    <div class="icons">
+      <a href="https://www.instagram.com/chernygoodsco/">
+        <img src="instagramIcon.png" width="50" height="50"
+      /></a>
+      <a href="https://www.facebook.com/ChernyGoodsCo/">
+        <img src="facebookicon.png" width="50" height="50"
+      /></a>
+      <a href="https://www.youtube.com/channel/UCpSzGZ77IeSEfwOoy0nq1yw">
+        <img src="yt_icon_rgb.png" width="71" height="50"
+      /></a>
+      <a href="https://www.twitch.tv/chernygoodsco">
+        <img src="TwitchGlitchPurple.png" width="43" height="50"
+      /></a>
+      <a href="https://twitter.com/ChernyGoodsCo">
+        <img src="Twitter_Logo_Blue.png" width="50" height="50"
+      /></a>
+      <a href="https://www.pinterest.com/ChernyGoodsCo/">
+        <img src="badgeRGB-288px.png" width="50" height="50"
+      /></a>
+    </div>
+  </body>
 </html>
