--- a/card/instructions/index.html
+++ b/card/instructions/index.html
@@ -49,20 +49,34 @@
         display: block;
       }
       .header-logo img {
-        width: 150px;
+        width: 200px;
         height: auto;
+      }
+      @media (max-width: 768px) {
+        body {
+          font-size: 1.7em;
+          padding: 0.5em;
+        }
+        .card-container {
+          padding: 1em;
+        }
       }
     </style>
   </head>
 
   <body>
     <a href="../../" class="header-logo">
-      <img src="../../logo_single.png" alt="Cherny Goods Co. Logo" />
+      <img
+        src="../../logo_single.png"
+        alt="Cherny Goods Co. Logo"
+        width="727"
+        height="228"
+      />
     </a>
 
     <div class="card-container">
       <!-- Thank You Note -->
-      <h1>Thank you for purchasing a Digital Leather business card!</h1>
+      <h1>Thank you for purchasing a Digital Leather Business Card!</h1>
 
       <!-- Video Section
 
@@ -86,11 +100,11 @@
 
       <!-- Introduction -->
       <p class="paragraph-relaxed">
-        Digital Leather business cards leverage NFC (Near Field Communication)
+        Digital Leather Business Cards leverage NFC (Near Field Communication)
         technology to allow you to instantly share your contact information,
         website, social media, and more with a simple tap to a compatible
         smartphone. This guide will walk you through encoding a URL onto your
-        Digital Leather business card using the NFC Tools mobile app.
+        Digital Leather Business Card using the NFC Tools mobile app.
       </p>
 
       <!-- What You'll Need -->
