--- a/card/instructions/index.html
+++ b/card/instructions/index.html
@@ -17,7 +17,7 @@
 
     <style>
       a {
-        color: E29D25;
+        color: #e29d25;
       }
 
       body {
@@ -31,20 +31,6 @@
       .card-container {
         padding: 1.5em;
       }
-      div.link {
-        font-size: 5em;
-        text-align: center;
-        margin-top: 1em;
-      }
-      div.icons {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        padding-bottom: 2em;
-      }
-      div.icons img {
-        margin: 1em;
-      }
       .header-logo {
         display: block;
       }
@@ -54,11 +40,11 @@
       }
       @media (max-width: 768px) {
         body {
-          font-size: 1.7em;
+          font-size: 2em;
           padding: 0.5em;
         }
         .card-container {
-          padding: 1em;
+          padding: 0;
         }
       }
     </style>
