--- a/card/instructions/index.html
+++ b/card/instructions/index.html
@@ -23,13 +23,13 @@
       body {
         background-color: black;
         color: white;
-        padding: 1em;
+        padding: 1rem;
         font-size: 1.5em;
         font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
           "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
       }
       .card-container {
-        padding: 1.5em;
+        padding: 1.5rem;
       }
       .header-logo {
         display: block;
@@ -40,8 +40,8 @@
       }
       @media (max-width: 768px) {
         body {
-          font-size: 2em;
-          padding: 0.5em;
+          font-size: 2rem;
+          padding: 0.5rem;
         }
         .card-container {
           padding: 0;
