Fixed the instructions

--- a/card/instructions/index.html
+++ b/card/instructions/index.html
@@ -157,10 +157,7 @@
           <code class="code-snippet">https://linkedin.com/in/yourprofile</code
           >).
         </li>
-        <li>
-          Tap <strong class="font-medium">"Validate"</strong> (or a similar
-          confirmation button) to confirm the URL.
-        </li>
+        <li>Tap <strong class="font-medium">OK</strong> to save the URL.</li>
         <li>
           Tap on <strong class="font-medium">"Write / X Bytes"</strong> (where
           'X' represents the size of the data to be written).
