--- a/card/instructions/index.html
+++ b/card/instructions/index.html
@@ -62,7 +62,7 @@
 
     <div class="card-container">
       <!-- Thank You Note -->
-      <h1>Thank you for purchasing a Digital Leather Business Card!</h1>
+      <h1>Thank you for getting a Digital Leather Business Card!</h1>
 
       <!-- Video Section
 
