More tweaking of the language, making it less formal.

--- a/card/instructions/index.html
+++ b/card/instructions/index.html
@@ -89,8 +89,9 @@
         Digital Leather Business Cards leverage NFC (Near Field Communication)
         technology to allow you to instantly share your contact information,
         website, social media, and more with a simple tap to a compatible
-        smartphone. This guide will walk you through encoding a URL onto your
-        Digital Leather Business Card using the NFC Tools mobile app.
+        smartphone. This guide will walk you through setting
+        <b><i>your</i></b> URL onto your Digital Leather Business Card using the
+        NFC Tools mobile app.
       </p>
 
       <!-- What You'll Need -->
